# OurBlock

./: .dockerignore  .envrc  .gitignore  API_KEY_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT.md  HIGH_MEDIUM_PRIORITY_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MONOREPO_MIGRATION.md  PHASE_1_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY_FIXES_COMPLETE.md  STATUS_REPORT.md  build.sh  flake.nix  package.sh  repository.json  setup.ps1  setup.sh  test-local.sh
.github/workflows/: build.yaml  ha-addon.yml
deploy/: .env.example  Dockerfile  Dockerfile.ui  README.md  docker-compose.yaml  start.ps1  start.sh  stop.ps1  stop.sh
deploy/avahi/: avahi-daemon.conf
deploy/casaos/: docker-compose.yaml
deploy/config/: conductor-config.yaml
deploy/homeassistant/: config.yaml
deploy/mock-conductor/: mock_conductor.py
deploy/nginx/: default.conf
deploy/proxmox/: create-lxc.sh
deploy/scripts/: build-multiarch.sh  setup.sh
deploy/status-dashboard/: server.py
deploy/status-dashboard/templates/: index.html
deploy/umbrel/: docker-compose.yml  umbrel-app.yml
dnas/our_block/workdir/: dna.yaml
dnas/our_block/zomes/coordinator/chat/: Cargo.toml
dnas/our_block/zomes/coordinator/events/: Cargo.toml
dnas/our_block/zomes/coordinator/feed/: Cargo.toml
dnas/our_block/zomes/coordinator/feed/src/: lib.rs
dnas/our_block/zomes/coordinator/file_storage/: Cargo.toml
dnas/our_block/zomes/coordinator/helpinghands/: Cargo.toml
dnas/our_block/zomes/coordinator/profile/: Cargo.toml
dnas/our_block/zomes/coordinator/profile/src/: lib.rs
dnas/our_block/zomes/coordinator/spaces/: Cargo.toml
dnas/our_block/zomes/coordinator/toolshed/: Cargo.toml
dnas/our_block/zomes/coordinator/toolshed/src/: lib.rs
dnas/our_block/zomes/coordinator/vouch/: Cargo.toml
dnas/our_block/zomes/coordinator/vouch/src/: lib.rs
dnas/our_block/zomes/integrity/chat_integrity/: Cargo.toml
dnas/our_block/zomes/integrity/events/: Cargo.toml
dnas/our_block/zomes/integrity/feed/: Cargo.toml
dnas/our_block/zomes/integrity/file_storage/: Cargo.toml
docs/: API_KEY_GUIDE.md  ARCHITECTURE.md  CRITICAL_GAP_RESOLUTION.md  HOME_ASSISTANT_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INVITATION_SYSTEM.md  JOIN_FLOW_NOTES.md  MOBILE_HUB_CONNECTIVITY.md  PHASE2_IMPLEMENTATION.md  PHASE3_ARCHITECTURE.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  QUICK_REFERENCE.md  ROADMAP.md  SECURITY.md  TASK_C_COMPLETE.md  TESTING_JOIN_FLOW.md  V0.5.0_IMPLEMENTATION.md  V0.5.0_QUICK_REFERENCE.md  V2_INVITE_CODES.md
home-assistant/: README.md  config.yaml  repository.json
infra/backup/: Dockerfile  backup.sh
infra/docker-general/: .env.example  docker-compose.dev.yaml  docker-compose.local.yaml
infra/docker-general/.secrets/: admin_api_key.txt
infra/docker-general/avahi/: ourblock.service
infra/docker-general/dev-ui/: index.html
infra/docker-general/homeassistant/: Dockerfile
infra/docker-general/raspi/: setup-raspi.sh
infra/docker-general/scripts/: entrypoint.sh  setup-ourblock.sh
infra/docker-general/status-dashboard/: Dockerfile
infra/docker-general/status-dashboard/static/: .gitkeep
infra/ha-addon/: Dockerfile  README.md  config.yaml
infra/ha-addon/old-docker-in-docker/: README.md  run.sh
infra/ha-addon/old-docker-in-docker/ui/: index.html  package.json
infra/nginx/: .gitignore  Dockerfile  README.md  generate-certs.ps1  generate-certs.sh  sidecar.conf
infra/sidecar/: .env.example  Cargo.toml  Dockerfile  README.md
infra/sidecar/src/: main.rs
ourblock-hub/: Dockerfile  config.yaml  discover.sh  run.sh
ourblock-hub/rootfs/etc/cont-init.d/: 00-config
ourblock-hub/ui/: vite.config.ts
ourblock-hub/ui/src/: main.tsx
ourblock-hub/ui/src/components/: AvailabilityCalendar.css  ChatWindow.tsx  CommunitySwitcher.css  CreateEventForm.tsx  EventCard.css  ImageUploadCrop.css  ImageUploadCrop.tsx  ItemBookingCalendar.css  ItemGallery.tsx  OwnerAvailabilityCalendar.css  OwnerRentalView.tsx  PostCard.css  PostCard.tsx  ProfileForm.css  ReservationModal.css  SharedSpaces.tsx
ourblock-hub/ui/src/contexts/: HolochainContext.tsx
ourblock-hub/ui/src/hooks/: useProfile.ts
ourblock-hub/ui/src/layouts/: SettingsLayout.css  SettingsLayout.tsx
ourblock-hub/ui/src/pages/: LandingPage.tsx  SystemPage.tsx
ourblock-hub/ui/src/types/: holochain.ts  vouch.ts
ourblock-hub/ui/src/utils/: inviteCode.ts  logger.ts  onboarding.ts  sentry.ts
sidecar/: Dockerfile  README.md  package.json  server.js
ui/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/public/: ICON_GUIDE.md  manifest.json
ui/src/: App.css  App.tsx  index.css  vite-env.d.ts
ui/src/components/: AddItemForm.css  AddItemForm.tsx  BackupManager.tsx  BorrowerRentalView.tsx  ChatWindow.css  ChatWindow.tsx  CreatePostForm.css  CreatePostForm.tsx  CreateSpaceForm.tsx  EventCard.tsx  EventsFeed.tsx  ItemCard.css  ItemCard.tsx  ItemEditor.tsx  ItemGallery.css  ItemGallery.tsx  MyGarage.css  MyGarage.tsx  PostCard.css  PostCard.tsx  PostFeed.css  PostFeed.tsx  ProfileDisplay.css  ProfileDisplay.tsx  ProfileEditor.css  ProfileEditor.tsx  ProfileForm.css  ProfileForm.tsx  SharedSpaces.tsx  SpaceCard.css  SpaceCard.tsx  SyncStatusIndicator.css
ui/src/contexts/: HolochainContext.tsx
ui/src/pages/: ProfilePage.css  SystemPage.css
ui/src/test/: setup.ts
ui/src/types/: feed.ts  helpinghands.ts  index.ts  profile.ts  toolshed.ts
ui/src/utils/: itemStatus.ts  syncManager.ts
workdir/: happ.yaml  web-happ.yaml
(+94 files in other folders)
