[workspace]
resolver = "2"
members = [
    "dnas/our_block/zomes/integrity/profile",
    "dnas/our_block/zomes/integrity/vouch",
    "dnas/our_block/zomes/integrity/feed",
    "dnas/our_block/zomes/integrity/toolshed",
    "dnas/our_block/zomes/integrity/helpinghands_integrity",
    "dnas/our_block/zomes/integrity/chat_integrity",
    "dnas/our_block/zomes/coordinator/profile",
    "dnas/our_block/zomes/coordinator/vouch",
    "dnas/our_block/zomes/coordinator/feed",
    "dnas/our_block/zomes/coordinator/toolshed",
    "dnas/our_block/zomes/coordinator/helpinghands",
    "dnas/our_block/zomes/coordinator/chat",
]

[workspace.dependencies]
# Holochain dependencies - compatible with Holochain 0.7.x
hdi = { version = "0.6", features = ["unstable-functions"] }
hdk = { version = "0.5", features = ["unstable-functions"] }
holochain_serialized_bytes = "0.0.56"
serde = "1"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
