[workspace]
resolver = "2"
members = [
    "dnas/our_block/zomes/integrity/profile",
    "dnas/our_block/zomes/integrity/vouch",
    "dnas/our_block/zomes/integrity/feed",
    "dnas/our_block/zomes/integrity/toolshed",
    "dnas/our_block/zomes/integrity/helpinghands_integrity",
    "dnas/our_block/zomes/integrity/chat_integrity",
    "dnas/our_block/zomes/coordinator/profile",
    "dnas/our_block/zomes/coordinator/vouch",
    "dnas/our_block/zomes/coordinator/feed",
    "dnas/our_block/zomes/coordinator/toolshed",
    "dnas/our_block/zomes/coordinator/helpinghands",
    "dnas/our_block/zomes/coordinator/chat",
]

[workspace.dependencies]
# Holochain dependencies - matching scaffold (main-0.6 branch)
hdi = "=0.7.0"
hdk = "=0.6.0"
serde = "1.0"
holochain_serialized_bytes = "*"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
