[package]
name = "ourblock-sidecar"
version = "0.1.0"
edition = "2021"
authors = ["OurBlock Team"]
description = "Secure sidecar service for managing OurBlock Docker container updates"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit", "buffer"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
hyper = "1.0"

# Rate limiting
tower_governor = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = "0.4"

# Environment variables
dotenvy = "0.15"

# mDNS service discovery
mdns-sd = "0.11"

# Docker API client (optional - for future use)
# bollard = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
