[package]
name = "feed"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "feed"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
holochain_serialized_bytes = { workspace = true }
feed_integrity = { path = "../../integrity/feed" }
