[package]
name = "profile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profile"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
holochain_serialized_bytes = { workspace = true }
profile_integrity = { path = "../../integrity/profile" }
