[package]
name = "toolshed"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "toolshed"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
holochain_serialized_bytes = { workspace = true }
toolshed_integrity = { path = "../../integrity/toolshed" }
