[package]
name = "vouch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "vouch"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
holochain_serialized_bytes = { workspace = true }
vouch_integrity = { path = "../../integrity/vouch" }
